Corrected Text-Alignment for pageviews & revScore

--- a/app/assets/stylesheets/modules/_article_finder.styl
+++ b/app/assets/stylesheets/modules/_article_finder.styl
@@ -11,6 +11,13 @@
 .fetch-more
   height 3rem
 
+.pageviews 
+  text-align justify
+  direction rtl
+
+.revScore 
+  text-align center
+
 .search-bar
   display flex
   flex-direction row
